// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostRead should render with ltr most read with correct dir 1`] = `
.c2 {
  position: relative;
}

.c3 {
  position: relative;
}

.c8 {
  color: #222222;
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
}

.c5 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  color: #B80000;
  font-size: 2rem;
  line-height: 2.25rem;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: 3rem;
}

.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #3F3F42;
}

@supports (display:grid) {
  .c2 {
    display: grid;
    position: initial;
  }
}

@supports (display:grid) {
  .c3 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c4 {
    display: inline-block;
    width: 11.11111111111111%;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c4 {
    display: inline-block;
    width: 11.11111111111111%;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    display: inline-block;
    width: 22.22222222222222%;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    display: inline-block;
    width: 22.22222222222222%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c4 {
    display: inline-block;
    width: 16.666666666666668%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c4 {
    display: inline-block;
    width: 16.666666666666668%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c4 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c6 {
    display: inline-block;
    width: 88.88888888888889%;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c6 {
    display: inline-block;
    width: 88.88888888888889%;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c6 {
    display: inline-block;
    width: 77.77777777777777%;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c6 {
    display: inline-block;
    width: 77.77777777777777%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c6 {
    display: inline-block;
    width: 83.33333333333333%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c6 {
    display: inline-block;
    width: 83.33333333333333%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c6 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:80rem) {
  .c7 {
    padding-top: 0.5rem;
    padding-left: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

<div>
  <section
    aria-labelledby="most-read-title"
    class=""
    role="region"
  >
    <h2
      class="c0"
      dir="ltr"
      id="most-read-title"
    >
      Most Read
    </h2>
  </section>
  <ol
    class="c1"
    role="list"
  >
    <div
      class="c2"
      dir="ltr"
    >
      <div
        as="li"
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
          dir="ltr"
        >
          <span
            class="c5"
          >
            1
          </span>
        </div>
        <div
          class="c6"
          dir="ltr"
        >
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
            >
              Could a computer ever create better art than a human?
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
          dir="ltr"
        >
          <span
            class="c5"
          >
            2
          </span>
        </div>
        <div
          class="c6"
          dir="ltr"
        >
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
            >
              Could a computer ever create better art than a human?
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
          dir="ltr"
        >
          <span
            class="c5"
          >
            3
          </span>
        </div>
        <div
          class="c6"
          dir="ltr"
        >
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
            >
              Could a computer ever create better art than a human?
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
          dir="ltr"
        >
          <span
            class="c5"
          >
            4
          </span>
        </div>
        <div
          class="c6"
          dir="ltr"
        >
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
            >
              Could a computer ever create better art than a human?
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
          dir="ltr"
        >
          <span
            class="c5"
          >
            5
          </span>
        </div>
        <div
          class="c6"
          dir="ltr"
        >
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
            >
              Could a computer ever create better art than a human?
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
          dir="ltr"
        >
          <span
            class="c5"
          >
            6
          </span>
        </div>
        <div
          class="c6"
          dir="ltr"
        >
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
            >
              Could a computer ever create better art than a human?
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
          dir="ltr"
        >
          <span
            class="c5"
          >
            7
          </span>
        </div>
        <div
          class="c6"
          dir="ltr"
        >
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
            >
              Could a computer ever create better art than a human?
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
          dir="ltr"
        >
          <span
            class="c5"
          >
            8
          </span>
        </div>
        <div
          class="c6"
          dir="ltr"
        >
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
            >
              Could a computer ever create better art than a human?
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
          dir="ltr"
        >
          <span
            class="c5"
          >
            9
          </span>
        </div>
        <div
          class="c6"
          dir="ltr"
        >
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
            >
              Could a computer ever create better art than a human?
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="ltr"
      >
        <div
          class="c4"
          dir="ltr"
        >
          <span
            class="c5"
          >
            10
          </span>
        </div>
        <div
          class="c6"
          dir="ltr"
        >
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
            >
              Could a computer ever create better art than a human?
            </a>
          </div>
        </div>
      </div>
    </div>
  </ol>
</div>
`;

exports[`MostRead should render with rtl most read with correct dir 1`] = `
.c2 {
  position: relative;
}

.c3 {
  position: relative;
}

.c8 {
  color: #222222;
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-right: 1rem;
}

.c5 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #B80000;
  font-size: 2rem;
  line-height: 2.25rem;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: 3rem;
}

.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c0 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1.5rem;
  line-height: 2.125rem;
  color: #3F3F42;
}

@supports (display:grid) {
  .c2 {
    display: grid;
    position: initial;
  }
}

@supports (display:grid) {
  .c3 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c4 {
    display: inline-block;
    width: 11.11111111111111%;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c4 {
    display: inline-block;
    width: 11.11111111111111%;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    display: inline-block;
    width: 22.22222222222222%;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    display: inline-block;
    width: 22.22222222222222%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c4 {
    display: inline-block;
    width: 16.666666666666668%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c4 {
    display: inline-block;
    width: 16.666666666666668%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c4 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c6 {
    display: inline-block;
    width: 88.88888888888889%;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c6 {
    display: inline-block;
    width: 88.88888888888889%;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c6 {
    display: inline-block;
    width: 77.77777777777777%;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c6 {
    display: inline-block;
    width: 77.77777777777777%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c6 {
    display: inline-block;
    width: 83.33333333333333%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c6 {
    display: inline-block;
    width: 83.33333333333333%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c6 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (min-width:80rem) {
  .c7 {
    padding-top: 0.5rem;
    padding-right: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.375rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2.25rem;
    line-height: 3.125rem;
  }
}

<div>
  <section
    aria-labelledby="most-read-title"
    class=""
    role="region"
  >
    <h2
      class="c0"
      dir="rtl"
      id="most-read-title"
    >
      الأكثر قراءة
    </h2>
  </section>
  <ol
    class="c1"
    role="list"
  >
    <div
      class="c2"
      dir="rtl"
    >
      <div
        as="li"
        class="c3"
        dir="rtl"
      >
        <div
          class="c4"
          dir="rtl"
        >
          <span
            class="c5"
          >
            ۱
          </span>
        </div>
        <div
          class="c6"
          dir="rtl"
        >
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
            >
              لماذا يخجل البعض من اسم قريته في مصر؟
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="rtl"
      >
        <div
          class="c4"
          dir="rtl"
        >
          <span
            class="c5"
          >
            ۲
          </span>
        </div>
        <div
          class="c6"
          dir="rtl"
        >
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
            >
              لماذا يخجل البعض من اسم قريته في مصر؟
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="rtl"
      >
        <div
          class="c4"
          dir="rtl"
        >
          <span
            class="c5"
          >
            ۳
          </span>
        </div>
        <div
          class="c6"
          dir="rtl"
        >
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
            >
              لماذا يخجل البعض من اسم قريته في مصر؟
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="rtl"
      >
        <div
          class="c4"
          dir="rtl"
        >
          <span
            class="c5"
          >
            ۴
          </span>
        </div>
        <div
          class="c6"
          dir="rtl"
        >
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
            >
              لماذا يخجل البعض من اسم قريته في مصر؟
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="rtl"
      >
        <div
          class="c4"
          dir="rtl"
        >
          <span
            class="c5"
          >
            ۵
          </span>
        </div>
        <div
          class="c6"
          dir="rtl"
        >
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
            >
              لماذا يخجل البعض من اسم قريته في مصر؟
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="rtl"
      >
        <div
          class="c4"
          dir="rtl"
        >
          <span
            class="c5"
          >
            ۶
          </span>
        </div>
        <div
          class="c6"
          dir="rtl"
        >
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
            >
              لماذا يخجل البعض من اسم قريته في مصر؟
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="rtl"
      >
        <div
          class="c4"
          dir="rtl"
        >
          <span
            class="c5"
          >
            ۷
          </span>
        </div>
        <div
          class="c6"
          dir="rtl"
        >
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
            >
              لماذا يخجل البعض من اسم قريته في مصر؟
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="rtl"
      >
        <div
          class="c4"
          dir="rtl"
        >
          <span
            class="c5"
          >
            ۸
          </span>
        </div>
        <div
          class="c6"
          dir="rtl"
        >
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
            >
              لماذا يخجل البعض من اسم قريته في مصر؟
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="rtl"
      >
        <div
          class="c4"
          dir="rtl"
        >
          <span
            class="c5"
          >
            ۹
          </span>
        </div>
        <div
          class="c6"
          dir="rtl"
        >
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
            >
              لماذا يخجل البعض من اسم قريته في مصر؟
            </a>
          </div>
        </div>
      </div>
      <div
        as="li"
        class="c3"
        dir="rtl"
      >
        <div
          class="c4"
          dir="rtl"
        >
          <span
            class="c5"
          >
            ۱۰
          </span>
        </div>
        <div
          class="c6"
          dir="rtl"
        >
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
            >
              لماذا يخجل البعض من اسم قريته في مصر؟
            </a>
          </div>
        </div>
      </div>
    </div>
  </ol>
</div>
`;
